# ABY

src/abycore/ABY_utils/: ABYconstants.h
src/abycore/aby/: abyparty.cpp
src/examples/: CMakeLists.txt
src/examples/aby-hycc/: CMakeLists copy.txt  CMakeLists.txt  hycc_adapter.cpp
src/examples/aby_interpreter/: aby_interpreter.cpp
src/examples/aby_interpreter/common/: aby_interpreter.cpp  aby_interpreter.h  ezpc.h
src/examples/bench_operations/: bench_operations.cpp
src/examples/min-euclidean-dist/common/: min-euclidean-dist-circuit.cpp
src/examples/simd/common/: simd.cpp
